--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-a-Sketch</title>
     <link rel="stylesheet" href="stylesheet.css">
-    <div id="header-div">
-        <h1>Etch-a-Sketch</h1>
+    <div class="header-div">
+        <h1 id="md">Etch-a-Sketch</h1>
     </div>
 </head>
 <body>
